# analytics-uploader

./: .gitignore  README.md  pyproject.toml  requirements.txt
analytics_uploader/: __init__.py  __main__.py
src/analytics_uploader/: __init__.py  __main__.py
