[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-uploader"
readme = "README.md"
dependencies = [
    "python-dotenv",
    "httpx",
    "google-cloud-bigquery",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
]
dynamic = ["version"]

[project.scripts]
analytics-uploader = "analytics_uploader:run_data_pipeline"
